--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,29 @@
 <resources>
     <string name="app_name">Bingo</string>
 
-    <string name="bingoRange_title">輸入賓果數字範圍</string>
+    <string name="bingoRange_title">賓果數字範圍及獲勝條件</string>
     <string name="bingoRange_min">最小值</string>
     <string name="bingoRange_max">最大值</string>
     <string name="bingoNum_title">輸入範圍內數字</string>
     <string name="bingoNum_hint">數字</string>
+    <string name="bingoWinLine_hint">勝利連線數</string>
+    <string name="bingoWin_title">Game Over</string>
+    <string name="bingoWin_text">You Win</string>
 
-    <string name="dialogToast_Null">請輸入最小值及最大值</string>
+
+    <string name="dialogToast_Null">請輸入數值範圍及獲勝條件</string>
     <string name="dialogToast_Error">最小值及最大值輸入錯誤</string>
     <string name="dialogToast_lengthError">範圍數量必須超過 9</string>
     <string name="dialogToast_EditNumError">數值範圍須 </string>
     <string name="dialogToast_EditNumComp">已有相同數字</string>
     <string name="dialogToast_NumNull">請輸入數字</string>
+    <string name="dialogToast_WinLine">獲勝條件請輸入1~8</string>
 
     <string name="enter">確定</string>
     <string name="cancel">取消</string>
 
-    <string name="nowRange">目前賓果範圍為：</string>
-    <string name="nowLine"> 連線</string>
+    <string name="nowRange">賓果範圍：</string>
+    <string name="current">當前:</string>
+    <string name="aims">目標:</string>
+    <string name="nowLine">連線</string>
 </resources>
