--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Bingo</string>
 
-    <string name="bingoRange_title">宾果数字范围及获胜条件</string>
+    <string name="bingoRange_title">宾果盘设置</string>
         <string name="bingoRange_min">最小值</string>
         <string name="bingoRange_max">最大值</string>
         <string name="bingoNum_title">输入范围内数字</string>
@@ -10,15 +10,20 @@
         <string name="bingoWidth_hint">宽度(如 3x3 请输入 3)</string>
         <string name="bingoWin_title">BINGO</string>
         <string name="bingoWin_text">You Win</string>
+        <string name="bingoLoad_title">已有记录档</string>
+        <string name="bingoLoad_text">是否继续</string>
+        <string name="bingoLoad_Yes">继续游戏</string>
+        <string name="bingoLoad_No">重新开始</string>
 
 
         <string name="dialogToast_Null">请输入数值范围及获胜条件</string>
         <string name="dialogToast_Error">最小值及最大值输入错误</string>
-        <string name="dialogToast_lengthError">范围数量必须超过</string>
+        <string name="dialogToast_lengthError">范围最小值为 1, 且数量必须超过</string>
         <string name="dialogToast_EditNumError">数值范围须</string>
         <string name="dialogToast_EditNumComp">已有相同数字</string>
         <string name="dialogToast_NumNull">请输入数字</string>
-        <string name="dialogToast_WinLine">模式最大连线数为</string>
+        <string name="dialogToast_WinLine">模式连线数为1~</string>
+        <string name="dialogToast_Width">宽度最小值为2</string>
 
         <string name="enter">确定</string>
         <string name="cancel">取消</string>
